@@ -33,7 +33,6 @@ import org.checkerframework.dataflow.qual.Pure;
 import org.checkerframework.dataflow.qual.SideEffectFree;
 import org.checkerframework.framework.type.visitor.AnnotatedTypeVisitor;
 import org.checkerframework.framework.util.element.ElementAnnotationUtil.ErrorTypeKindException;
-import org.checkerframework.javacutil.AnnotationBuilder;
 import org.checkerframework.javacutil.AnnotationMirrorSet;
 import org.checkerframework.javacutil.AnnotationUtils;
 import org.checkerframework.javacutil.BugInCF;
@@ -111,7 +110,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   // public AnnotatedTypeMirror clone() { ... }
 
   /**
-   * Creates an AnnotatedTypeMirror for the provided type. The result contains no annotations.
+   * Creates an empty AnnotatedTypeMirror for the provided type. The result contains no annotations.
    *
    * @param type the underlying type for the resulting AnnotatedTypeMirror
    * @param atypeFactory the type factory that will build the result
@@ -127,50 +126,33 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
 
     AnnotatedTypeMirror result;
     switch (type.getKind()) {
-      case ARRAY:
-        result = new AnnotatedArrayType((ArrayType) type, atypeFactory);
-        break;
-      case DECLARED:
-        result = new AnnotatedDeclaredType((DeclaredType) type, atypeFactory, isDeclaration);
-        break;
-      case ERROR:
-        throw new BugInCF(
-            "AnnotatedTypeMirror.createType: input is not compilable. Found error type: " + type);
-
-      case EXECUTABLE:
-        result = new AnnotatedExecutableType((ExecutableType) type, atypeFactory);
-        break;
-      case VOID:
-      case PACKAGE:
-      case NONE:
-        result = new AnnotatedNoType((NoType) type, atypeFactory);
-        break;
-      case NULL:
-        result = new AnnotatedNullType((NullType) type, atypeFactory);
-        break;
-      case TYPEVAR:
-        result = new AnnotatedTypeVariable((TypeVariable) type, atypeFactory, isDeclaration);
-        break;
-      case WILDCARD:
-        result = new AnnotatedWildcardType((WildcardType) type, atypeFactory);
-        break;
-      case INTERSECTION:
-        result = new AnnotatedIntersectionType((IntersectionType) type, atypeFactory);
-        break;
-      case UNION:
-        result = new AnnotatedUnionType((UnionType) type, atypeFactory);
-        break;
-      default:
+      case ARRAY -> result = new AnnotatedArrayType((ArrayType) type, atypeFactory);
+      case DECLARED ->
+          result = new AnnotatedDeclaredType((DeclaredType) type, atypeFactory, isDeclaration);
+      case ERROR ->
+          throw new BugInCF(
+              "AnnotatedTypeMirror.createType: input is not compilable. Found error type: " + type);
+      case EXECUTABLE -> result = new AnnotatedExecutableType((ExecutableType) type, atypeFactory);
+      case VOID, PACKAGE, NONE -> result = new AnnotatedNoType((NoType) type, atypeFactory);
+      case NULL -> result = new AnnotatedNullType((NullType) type, atypeFactory);
+      case TYPEVAR ->
+          result = new AnnotatedTypeVariable((TypeVariable) type, atypeFactory, isDeclaration);
+      case WILDCARD -> result = new AnnotatedWildcardType((WildcardType) type, atypeFactory);
+      case INTERSECTION ->
+          result = new AnnotatedIntersectionType((IntersectionType) type, atypeFactory);
+      case UNION -> result = new AnnotatedUnionType((UnionType) type, atypeFactory);
+      default -> {
         if (type.getKind().isPrimitive()) {
           result = new AnnotatedPrimitiveType((PrimitiveType) type, atypeFactory);
-          break;
+        } else {
+          throw new BugInCF(
+              "AnnotatedTypeMirror.createType: unidentified type "
+                  + type
+                  + " ("
+                  + type.getKind()
+                  + ")");
         }
-        throw new BugInCF(
-            "AnnotatedTypeMirror.createType: unidentified type "
-                + type
-                + " ("
-                + type.getKind()
-                + ")");
+      }
     }
     /*if (jctype.isAnnotated()) {
         result.addAnnotations(jctype.getAnnotationMirrors());
@@ -184,11 +166,11 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       return true;
     }
 
-    if (!(o instanceof AnnotatedTypeMirror)) {
+    if (!(o instanceof AnnotatedTypeMirror atm)) {
       return false;
     }
 
-    return EQUALITY_COMPARER.visit(this, (AnnotatedTypeMirror) o, null);
+    return EQUALITY_COMPARER.visit(this, atm, null);
   }
 
   @Pure
@@ -257,8 +239,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Returns true if this type has a primary annotation in the same hierarchy as {@code annotation}.
    *
    * @param annotation the qualifier hierarchy to check for
-   * @return true iff this type has a primary annotation in the same hierarchy as {@code
-   *     annotation}.
+   * @return true iff this type has a primary annotation in the same hierarchy as {@code annotation}
    */
   public boolean hasPrimaryAnnotationInHierarchy(AnnotationMirror annotation) {
     return getPrimaryAnnotationInHierarchy(annotation) != null;
@@ -268,31 +249,28 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Returns the primary annotation on this type that is in the same hierarchy as {@code
    * annotation}. For {@link AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code
    * null} may be returned when the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotationInHierarchy(AnnotationMirror)} should be called instead.
+   * #getAnnotationInHierarchy(AnnotationMirror)} should be called instead.
    *
    * @param annotation an annotation in the qualifier hierarchy to check for
-   * @return the annotation mirror whose class is named {@code annoNAme} or null
+   * @return the annotation in the same hierarchy as {@code annotation}, or null
    */
   public @Nullable AnnotationMirror getPrimaryAnnotationInHierarchy(AnnotationMirror annotation) {
     if (primaryAnnotations.isEmpty()) {
       return null;
     }
-    AnnotationMirror canonical = annotation;
-    if (!atypeFactory.isSupportedQualifier(canonical)) {
-      canonical = atypeFactory.canonicalAnnotation(annotation);
-      if (canonical == null) {
-        // This can happen if annotation is unrelated to this AnnotatedTypeMirror.
-        return null;
-      }
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
+    if (!atypeFactory.isSupportedQualifier(annotation)) {
+      // This can happen if the annotation is unrelated to this AnnotatedTypeMirror.
+      return null;
     }
-    if (atypeFactory.isSupportedQualifier(canonical)) {
-      QualifierHierarchy qualHierarchy = atypeFactory.getQualifierHierarchy();
-      AnnotationMirror anno =
-          qualHierarchy.findAnnotationInSameHierarchy(primaryAnnotations, canonical);
-      if (anno != null) {
-        return anno;
-      }
+
+    QualifierHierarchy qualHierarchy = atypeFactory.getQualifierHierarchy();
+    AnnotationMirror anno =
+        qualHierarchy.findAnnotationInSameHierarchy(primaryAnnotations, annotation);
+    if (anno != null) {
+      return anno;
     }
+
     return null;
   }
 
@@ -306,15 +284,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * @param annotation an annotation in the qualifier hierarchy to check for
    * @return an annotation from the same hierarchy as {@code annotation} if present
    */
-  public @Nullable AnnotationMirror getEffectiveAnnotationInHierarchy(AnnotationMirror annotation) {
-    AnnotationMirror canonical = annotation;
-    if (!atypeFactory.isSupportedQualifier(canonical)) {
-      canonical = atypeFactory.canonicalAnnotation(annotation);
-    }
-    if (atypeFactory.isSupportedQualifier(canonical)) {
+  public @Nullable AnnotationMirror getAnnotationInHierarchy(AnnotationMirror annotation) {
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
+    if (atypeFactory.isSupportedQualifier(annotation)) {
       QualifierHierarchy qualHierarchy = this.atypeFactory.getQualifierHierarchy();
       AnnotationMirror anno =
-          qualHierarchy.findAnnotationInSameHierarchy(getEffectiveAnnotations(), canonical);
+          qualHierarchy.findAnnotationInSameHierarchy(getAnnotations(), annotation);
       if (anno != null) {
         return anno;
       }
@@ -325,7 +300,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotations on this type. For {@link AnnotatedTypeVariable}s and {@link
    * AnnotatedWildcardType}s, the returned annotations may be empty or missing annotations in
-   * hierarchies, so {@link #getEffectiveAnnotations()} should be called instead.
+   * hierarchies, so {@link #getAnnotations()} should be called instead.
    *
    * <p>It does not include annotations in deep types (type arguments, array components, etc).
    *
@@ -356,7 +331,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the single primary annotations on this type. For {@link AnnotatedTypeVariable}s and
    * {@link AnnotatedWildcardType}s, the returned annotations may be empty or missing annotations in
-   * hierarchies, so {@link #getEffectiveAnnotation()} should be called instead.
+   * hierarchies, so {@link #getAnnotation()} should be called instead.
    *
    * <p>This method requires that there is only a single hierarchy. Therefore, it is equivalent to
    * {@link #getPrimaryAnnotationInHierarchy}.
@@ -384,9 +359,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *
    * @return a set of the annotations on this
    */
-  // TODO: When the current, deprecated `getAnnotations()` (deprecation date 2023-06-15) is
-  // removed, rename all the "getEffectiveAnnotation...()" methods to just "getAnnotation...()".
-  public AnnotationMirrorSet getEffectiveAnnotations() {
+  public AnnotationMirrorSet getAnnotations() {
     AnnotationMirrorSet effectiveAnnotations = getErased().getPrimaryAnnotations();
     //        assert atypeFactory.qualHierarchy.getWidth() == effectiveAnnotations
     //                .size() : "Invalid number of effective annotations ("
@@ -402,18 +375,18 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * type is reached). If this is fully-annotated, this method will not return {@code null}
    *
    * <p>This method requires that there is only a single hierarchy. Therefore, it is equivalent to
-   * {@link #getEffectiveAnnotationInHierarchy(AnnotationMirror)}.
+   * {@link #getAnnotationInHierarchy(AnnotationMirror)}.
    *
-   * @return a set of the annotations on this
+   * @return the annotation on this type, or null if there is none
    */
-  public final AnnotationMirror getEffectiveAnnotation() {
-    AnnotationMirrorSet effectiveAnnotations = getEffectiveAnnotations();
+  public final AnnotationMirror getAnnotation() {
+    AnnotationMirrorSet effectiveAnnotations = getAnnotations();
     if (effectiveAnnotations.isEmpty()) {
       // This AnnotatedTypeMirror must be a type variable or wildcard.
       return null;
     }
     if (effectiveAnnotations.size() != 1) {
-      throw new BugInCF("Bad annotation size for getPrimaryAnnotation(): " + this);
+      throw new BugInCF("Bad annotation size for getAnnotation(): " + this);
     }
     return effectiveAnnotations.iterator().next();
   }
@@ -421,8 +394,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotation on this type whose class is {@code annoClass}. For {@link
    * AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code null} may be returned when
-   * the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotation(Class)} should be called instead.
+   * the upper bound may have an annotation with that class, so {@link #getAnnotation(Class)} should
+   * be called instead.
    *
    * @param annoClass annotation class
    * @return the annotation mirror whose class is {@code annoClass} or null
@@ -439,8 +412,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * Returns the primary annotations on this type whose annotation class name {@code annoName}. For
    * {@link AnnotatedTypeVariable}s and {@link AnnotatedWildcardType}s, {@code null} may be returned
-   * when the upper bound may have an annotation with that class, so {@link
-   * #getEffectiveAnnotation(Class)} should be called instead.
+   * when the upper bound may have an annotation with that class, so {@link #getAnnotation(Class)}
+   * should be called instead.
    *
    * @param annoName annotation class name
    * @return the annotation mirror whose class is named {@code annoName} or null
@@ -527,8 +500,8 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * @param annoClass annotation class
    * @return the effective annotation with the same class as {@code annoClass}
    */
-  public @Nullable AnnotationMirror getEffectiveAnnotation(Class<? extends Annotation> annoClass) {
-    for (AnnotationMirror annoMirror : getEffectiveAnnotations()) {
+  public @Nullable AnnotationMirror getAnnotation(Class<? extends Annotation> annoClass) {
+    for (AnnotationMirror annoMirror : getAnnotations()) {
       if (atypeFactory.areSameByClass(annoMirror, annoClass)) {
         return annoMirror;
       }
@@ -539,17 +512,23 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * A version of {@link #hasPrimaryAnnotation(Class)} that considers annotations on the upper bound
    * of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation of the given class
    */
-  public boolean hasEffectiveAnnotation(Class<? extends Annotation> a) {
-    return getEffectiveAnnotation(a) != null;
+  public boolean hasAnnotation(Class<? extends Annotation> a) {
+    return getAnnotation(a) != null;
   }
 
   /**
    * A version of {@link #hasPrimaryAnnotation(AnnotationMirror)} that considers annotations on the
    * upper bound of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation that is the same as the given annotation
    */
-  public boolean hasEffectiveAnnotation(AnnotationMirror a) {
-    return AnnotationUtils.containsSame(getEffectiveAnnotations(), a);
+  public boolean hasAnnotation(AnnotationMirror a) {
+    return AnnotationUtils.containsSame(getAnnotations(), a);
   }
 
   /**
@@ -591,9 +570,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   /**
    * A version of {@link #hasPrimaryAnnotationRelaxed(AnnotationMirror)} that considers annotations
    * on the upper bound of wildcards and type variables.
+   *
+   * @param a an annotation class
+   * @return true if this has an annotation that is the same as the given annotation
    */
-  public boolean hasEffectiveAnnotationRelaxed(AnnotationMirror a) {
-    return AnnotationUtils.containsSameByName(getEffectiveAnnotations(), a);
+  public boolean hasAnnotationRelaxed(AnnotationMirror a) {
+    return AnnotationUtils.containsSameByName(getAnnotations(), a);
   }
 
   /**
@@ -620,16 +602,22 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * @see #getExplicitAnnotations()
    */
   public boolean hasExplicitAnnotation(Class<? extends Annotation> a) {
-    return AnnotationUtils.containsSameByName(getExplicitAnnotations(), getPrimaryAnnotation(a));
+    AnnotationMirror primaryAnnotation = getPrimaryAnnotation(a);
+    if (primaryAnnotation == null) {
+      return false;
+    }
+    return AnnotationUtils.containsSameByName(getExplicitAnnotations(), primaryAnnotation);
   }
 
   /**
    * Adds the canonical version of {@code annotation} as a primary annotation of this type and, in
    * the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and {@link
    * AnnotatedIntersectionType}s, adds it to all bounds. (The canonical version is found via {@link
-   * AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of {@code annotation} is
-   * not a supported qualifier, then no annotation is added. If this type already has annotation in
-   * the same hierarchy as {@code annotation}, the behavior of this method is undefined.
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of {@code annotation} is not a supported qualifier, then no annotation is added. If
+   * this type already has annotation in the same hierarchy as {@code annotation}, the behavior of
+   * this method is undefined.
    *
    * @param annotation the annotation to add
    */
@@ -637,13 +625,9 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     if (annotation == null) {
       throw new BugInCF("AnnotatedTypeMirror.addAnnotation: null argument.");
     }
+    annotation = atypeFactory.canonicalAnnotation(annotation, underlyingType);
     if (atypeFactory.isSupportedQualifier(annotation)) {
       this.primaryAnnotations.add(annotation);
-    } else {
-      AnnotationMirror canonical = atypeFactory.canonicalAnnotation(annotation);
-      if (atypeFactory.isSupportedQualifier(canonical)) {
-        addAnnotation(canonical);
-      }
     }
   }
 
@@ -659,27 +643,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   }
 
   /**
-   * Adds an annotation to this type.
-   *
-   * @param a the class of the annotation to add
-   * @deprecated This method creates a new {@code AnnotationMirror} every time it is called. Instead
-   *     of calling this method, store the {@code AnnotationMirror} in a field and use {@link
-   *     #addAnnotation(AnnotationMirror)} instead.
-   */
-  @Deprecated // 2023-06-15
-  public void addAnnotation(Class<? extends Annotation> a) {
-    AnnotationMirror anno = AnnotationBuilder.fromClass(atypeFactory.elements, a);
-    addAnnotation(anno);
-  }
-
-  /**
    * Adds the canonical version of all {@code annotations} as primary annotations of this type and,
    * in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and {@link
    * AnnotatedIntersectionType}s, adds them to all bounds. (The canonical version is found via
-   * {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an {@code
-   * annotation} is not a supported qualifier, then that annotation is not add added. If this type
-   * already has annotation in the same hierarchy as any of the {@code annotations}, the behavior of
-   * this method is undefined.
+   * {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an annotation is not a supported qualifier, then that annotation is not added. If
+   * this type already has annotation in the same hierarchy as any of the {@code annotations}, the
+   * behavior of this method is undefined.
    *
    * @param annotations the annotations to add
    */
@@ -696,8 +667,9 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>The canonical version of the {@code annotations} are added as primary annotations of this
    * type and, in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and
    * {@link AnnotatedIntersectionType}s, adds them to all bounds. (The canonical version is found
-   * via {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an
-   * annotation is not a supported qualifier, then that annotation is not add added.
+   * via {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an annotation is not a supported qualifier, then that annotation is not added.
    *
    * @param annotations the annotations to add
    */
@@ -714,8 +686,10 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>The canonical version of the {@code annotation} is added as a primary annotation of this
    * type and (in the case of {@link AnnotatedTypeVariable}s, {@link AnnotatedWildcardType}s, and
    * {@link AnnotatedIntersectionType}s) added to all bounds. (The canonical version is found via
-   * {@link AnnotatedTypeFactory#canonicalAnnotation}.) If the canonical version of an {@code
-   * annotation} is not a supported qualifier, then that annotation is not add added.
+   * {@link AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror)} or {@link
+   * AnnotatedTypeFactory#canonicalAnnotation(AnnotationMirror,TypeMirror)}.) If the canonical
+   * version of an {@code annotation} is not a supported qualifier, then that annotation is not
+   * added.
    *
    * @param annotation the annotations to add
    */
@@ -774,24 +748,6 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   public boolean removePrimaryAnnotationInHierarchy(AnnotationMirror a) {
     AnnotationMirror prev = this.getPrimaryAnnotationInHierarchy(a);
     if (prev != null) {
-      return this.removePrimaryAnnotation(prev);
-    }
-    return false;
-  }
-
-  /**
-   * Remove an annotation that is in the same qualifier hierarchy as the parameter, unless it's the
-   * top annotation.
-   *
-   * @param a an annotation from the same qualifier hierarchy
-   * @return if an annotation was removed
-   * @deprecated This will be removed in a future release
-   */
-  @Deprecated // 2023-06-15
-  public boolean removeNonTopAnnotationInHierarchy(AnnotationMirror a) {
-    AnnotationMirror prev = this.getPrimaryAnnotationInHierarchy(a);
-    QualifierHierarchy qualHierarchy = this.atypeFactory.getQualifierHierarchy();
-    if (prev != null && !prev.equals(qualHierarchy.getTopAnnotation(a))) {
       return this.removePrimaryAnnotation(prev);
     }
     return false;
@@ -1099,7 +1055,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
           TypeMirror wildcard =
               BoundsInitializer.getUpperBoundAsWildcard(typeParameterVar, atypeFactory.types);
           AnnotatedWildcardType atmWild =
-              (AnnotatedWildcardType) AnnotatedTypeMirror.createType(wildcard, atypeFactory, false);
+              (AnnotatedWildcardType) createType(wildcard, atypeFactory, false);
           atmWild.setTypeArgOfRawType();
           BoundsInitializer.initializeBounds(atmWild);
           typeArgs.add(atmWild);
@@ -1115,14 +1071,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
       } else if (isDeclaration()) {
         for (TypeMirror javaTypeArg : t.getTypeArguments()) {
           AnnotatedTypeVariable tv =
-              (AnnotatedTypeVariable)
-                  AnnotatedTypeMirror.createType(javaTypeArg, atypeFactory, true);
+              (AnnotatedTypeVariable) createType(javaTypeArg, atypeFactory, true);
           typeArgs.add(tv);
         }
       } else {
         for (TypeMirror javaTypeArg : t.getTypeArguments()) {
-          AnnotatedTypeMirror typeArg =
-              AnnotatedTypeMirror.createType(javaTypeArg, atypeFactory, false);
+          AnnotatedTypeMirror typeArg = createType(javaTypeArg, atypeFactory, false);
           typeArgs.add(typeArg);
         }
       }
@@ -1184,8 +1138,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     public AnnotatedDeclaredType getErased() {
       AnnotatedDeclaredType erased =
           (AnnotatedDeclaredType)
-              AnnotatedTypeMirror.createType(
-                  atypeFactory.types.erasure(underlyingType), atypeFactory, false);
+              createType(atypeFactory.types.erasure(underlyingType), atypeFactory, false);
       erased.addAnnotations(this.getPrimaryAnnotations());
       AnnotatedDeclaredType erasedEnclosing = erased.getEnclosingType();
       AnnotatedDeclaredType thisEnclosing = this.getEnclosingType();
@@ -1240,7 +1193,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * This is a subclass of {@link AnnotatedDeclaredType} that adds annotations even if they are not
    * supported by the type system.
    */
-  private static class AnnotatedDeclaredTypeNoHierarchy extends AnnotatedDeclaredType {
+  private static final class AnnotatedDeclaredTypeNoHierarchy extends AnnotatedDeclaredType {
 
     /**
      * Constructor for this type. The result contains no annotations.
@@ -1259,7 +1212,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   }
 
   /** Represents a type of an executable. An executable is a method, constructor, or initializer. */
-  public static class AnnotatedExecutableType extends AnnotatedTypeMirror {
+  public static final class AnnotatedExecutableType extends AnnotatedTypeMirror {
 
     /** The element of the method. */
     /*package-private*/ @MonotonicNonNull ExecutableElement element;
@@ -1277,7 +1230,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /** The parameter types; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeMirror> paramTypes = null;
 
-    /** True if {@link paramTypes} has been computed. */
+    /** True if {@link #paramTypes} has been computed. */
     private boolean paramTypesComputed = false;
 
     /**
@@ -1286,25 +1239,25 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      */
     /*package-private*/ @Nullable AnnotatedDeclaredType receiverType;
 
-    /** True if {@link receiverType} has been computed. */
+    /** True if {@link #receiverType} has been computed. */
     private boolean receiverTypeComputed = false;
 
     /** The return type. */
     /*package-private*/ @MonotonicNonNull AnnotatedTypeMirror returnType;
 
-    /** True if {@link returnType} has been computed. */
+    /** True if {@link #returnType} has been computed. */
     private boolean returnTypeComputed = false;
 
     /** The thrown types; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeMirror> thrownTypes;
 
-    /** True if {@link thrownTypes} has been computed. */
+    /** True if {@link #thrownTypes} has been computed. */
     private boolean thrownTypesComputed = false;
 
     /** The type variables; an unmodifiable list. */
     /*package-private*/ @MonotonicNonNull List<AnnotatedTypeVariable> typeVarTypes;
 
-    /** True if {@link typeVarTypes} has been computed. */
+    /** True if {@link #typeVarTypes} has been computed. */
     private boolean typeVarTypesComputed = false;
 
     /**
@@ -1332,10 +1285,12 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      *
      * @deprecated add to the appropriate component
      */
-    @Deprecated // not for removal
+    @Deprecated(forRemoval = false) // deprecated to catch some calls at compile time
     @Override
     public void addAnnotation(AnnotationMirror annotation) {
-      assert false : "AnnotatedExecutableType.addAnnotation should never be called";
+      throw new BugInCF(
+          "AnnotatedExecutableType.addAnnotation should never be called. this=%s, annotation=%s",
+          this, annotation);
     }
 
     /**
@@ -1344,10 +1299,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param params the parameter types, excluding the receiver
      */
     /*package-private*/ void setParameterTypes(List<? extends AnnotatedTypeMirror> params) {
-      paramTypes =
-          params.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(params));
+      paramTypes = params.isEmpty() ? Collections.emptyList() : List.copyOf(params);
       paramTypesComputed = true;
     }
 
@@ -1470,10 +1422,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param thrownTypes the thrown types
      */
     /*package-private*/ void setThrownTypes(List<? extends AnnotatedTypeMirror> thrownTypes) {
-      this.thrownTypes =
-          thrownTypes.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(thrownTypes));
+      this.thrownTypes = thrownTypes.isEmpty() ? Collections.emptyList() : List.copyOf(thrownTypes);
       thrownTypesComputed = true;
     }
 
@@ -1503,10 +1452,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      * @param types the type variables of this executable type
      */
     /*package-private*/ void setTypeVariables(List<AnnotatedTypeVariable> types) {
-      typeVarTypes =
-          types.isEmpty()
-              ? Collections.emptyList()
-              : Collections.unmodifiableList(new ArrayList<>(types));
+      typeVarTypes = types.isEmpty() ? Collections.emptyList() : List.copyOf(types);
       typeVarTypesComputed = true;
     }
 
@@ -1611,8 +1557,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Represents Array types in java. A multidimensional array type is represented as an array type
    * whose component type is also an array type.
    */
-  public static class AnnotatedArrayType extends AnnotatedTypeMirror {
+  public static final class AnnotatedArrayType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedArrayType.
+     *
+     * @param type the underlying array type
+     * @param factory the annotated type factory
+     */
     private AnnotatedArrayType(ArrayType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -1712,13 +1664,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * capture conversion of a wildcard type argument (see chapter 5 of The Java Language
    * Specification, Third Edition).
    */
-  public static class AnnotatedTypeVariable extends AnnotatedTypeMirror {
-
-    private AnnotatedTypeVariable(
-        TypeVariable type, AnnotatedTypeFactory atypeFactory, boolean declaration) {
-      super(type, atypeFactory);
-      this.declaration = declaration;
-    }
+  public static final class AnnotatedTypeVariable extends AnnotatedTypeMirror {
 
     /** The lower bound of the type variable. */
     private AnnotatedTypeMirror lowerBound;
@@ -1726,7 +1672,21 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /** The upper bound of the type variable. */
     private AnnotatedTypeMirror upperBound;
 
+    /** True if this is a declaration, false if this is a use. */
     private boolean declaration;
+
+    /**
+     * Creates a new AnnotatedTypeVariable.
+     *
+     * @param type the underlying type variable
+     * @param atypeFactory the annotated type factory
+     * @param declaration true if representing a declaration, false if representing a use
+     */
+    private AnnotatedTypeVariable(
+        TypeVariable type, AnnotatedTypeFactory atypeFactory, boolean declaration) {
+      super(type, atypeFactory);
+      this.declaration = declaration;
+    }
 
     @Override
     public boolean isDeclaration() {
@@ -1781,9 +1741,9 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     /**
      * Set the lower bound of this variable type.
      *
-     * <p>Returns the lower bound of this type variable. While a type parameter cannot include an
-     * explicit lower bound declaration, capture conversion can produce a type variable with a
-     * non-trivial lower bound. Type variables otherwise have a lower bound of NullType.
+     * <p>While a type parameter cannot include an explicit lower bound declaration, capture
+     * conversion can produce a type variable with a non-trivial lower bound. Type variables
+     * otherwise have a lower bound of NullType.
      *
      * @param type the lower bound type
      */
@@ -1948,8 +1908,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *       superclass of java.lang.Object.
    * </ul>
    */
-  public static class AnnotatedNoType extends AnnotatedTypeMirror {
+  public static final class AnnotatedNoType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedNoType
+     *
+     * @param type the underlying {@code NoType}
+     * @param factory the annotated type factory
+     */
     private AnnotatedNoType(NoType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -1994,8 +1960,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
   }
 
   /** Represents the null type. This is the type of the expression {@code null}. */
-  public static class AnnotatedNullType extends AnnotatedTypeMirror {
+  public static final class AnnotatedNullType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedNullType.
+     *
+     * @param type the underlying {@code NullType}
+     * @param factory the annotated type factory
+     */
     private AnnotatedNullType(NullType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -2039,8 +2011,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * Represents a primitive type. These include {@code boolean}, {@code byte}, {@code short}, {@code
    * int}, {@code long}, {@code char}, {@code float}, and {@code double}.
    */
-  public static class AnnotatedPrimitiveType extends AnnotatedTypeMirror {
+  public static final class AnnotatedPrimitiveType extends AnnotatedTypeMirror {
 
+    /**
+     * Creates a new AnnotatedPrimitiveType.
+     *
+     * @param type the underlying primitive type
+     * @param factory the annotated type factory
+     */
     private AnnotatedPrimitiveType(PrimitiveType type, AnnotatedTypeFactory factory) {
       super(type, factory);
     }
@@ -2089,7 +2067,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    * <p>A wildcard may have its upper bound explicitly set by an extends clause, its lower bound
    * explicitly set by a super clause, or neither (but not both).
    */
-  public static class AnnotatedWildcardType extends AnnotatedTypeMirror {
+  public static final class AnnotatedWildcardType extends AnnotatedTypeMirror {
     /** Lower ({@code super}) bound. */
     private AnnotatedTypeMirror superBound;
 
@@ -2289,14 +2267,14 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    *
    * <p>For example: {@code MyObject & Serializable & Comparable<MyObject>}
    */
-  public static class AnnotatedIntersectionType extends AnnotatedTypeMirror {
+  public static final class AnnotatedIntersectionType extends AnnotatedTypeMirror {
 
     /**
      * A list of the bounds of this which are also its direct super types.
      *
      * <p>Is set by {@link #shallowCopy}.
      */
-    protected List<AnnotatedTypeMirror> bounds;
+    /*package-protected*/ List<AnnotatedTypeMirror> bounds;
 
     /**
      * Creates an {@code AnnotatedIntersectionType} with the underlying type {@code type}. The
@@ -2438,9 +2416,10 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
     }
   }
 
+  /** Represents a union type. */
   // TODO: Ensure union types are handled everywhere.
   // TODO: Should field "annotations" contain anything?
-  public static class AnnotatedUnionType extends AnnotatedTypeMirror {
+  public static final class AnnotatedUnionType extends AnnotatedTypeMirror {
 
     /**
      * Creates a new AnnotatedUnionType.
@@ -2487,7 +2466,7 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
      *
      * <p>Is set by {@link #getAlternatives} and {@link #shallowCopy}.
      */
-    protected @MonotonicNonNull List<AnnotatedDeclaredType> alternatives;
+    /*package-protected*/ @MonotonicNonNull List<AnnotatedDeclaredType> alternatives;
 
     /**
      * Returns the types that are unioned to form this AnnotatedUnionType.
@@ -2551,230 +2530,5 @@ public abstract class AnnotatedTypeMirror implements DeepCopyable<AnnotatedTypeM
    */
   public List<? extends AnnotatedTypeMirror> directSupertypes() {
     return SupertypeFinder.directSupertypes(this);
-  }
-
-  /**
-   * Removes all primary annotations on this type. Make sure to add an annotation after calling this
-   * method.
-   *
-   * <p>This method should only be used in very specific situations. For individual type systems, it
-   * is generally better to use {@link #removePrimaryAnnotation(AnnotationMirror)} and similar
-   * methods.
-   *
-   * @deprecated use {@link #clearPrimaryAnnotations()}
-   */
-  @Deprecated // 2023-06-15
-  public void clearAnnotations() {
-    clearPrimaryAnnotations();
-  }
-
-  /**
-   * Returns the single annotation on this type. It does not include annotations in deep types (type
-   * arguments, array components, etc).
-   *
-   * <p>This method requires that there is only a single hierarchy. Therefore, it is equivalent to
-   * {@link #getPrimaryAnnotationInHierarchy}.
-   *
-   * @see #getPrimaryAnnotations
-   * @return the annotation on this, or null if none (which can only happen if {@code this} is a
-   *     type variable or wildcard)
-   * @deprecated use {@link #getPrimaryAnnotation()} ()}
-   */
-  @Deprecated // 2023-06-15
-  public final @Nullable AnnotationMirror getAnnotation() {
-    return getPrimaryAnnotation();
-  }
-
-  /**
-   * Returns the annotation mirror used to annotate this type, whose Class equals the passed {@code
-   * annoClass} if one exists, null otherwise.
-   *
-   * @param annoClass annotation class
-   * @return the annotation mirror for anno
-   * @deprecated use {@link #getPrimaryAnnotation(Class)}
-   */
-  @Deprecated // 2023-06-15
-  public @Nullable AnnotationMirror getAnnotation(Class<? extends Annotation> annoClass) {
-    return getPrimaryAnnotation(annoClass);
-  }
-
-  /**
-   * Returns the annotation mirror used to annotate this type, whose name equals the passed {@code
-   * annoName} if one exists, null otherwise.
-   *
-   * @param annoName annotation name
-   * @return the annotation mirror for annoName
-   * @deprecated use {@link #getPrimaryAnnotation(String)}
-   */
-  @Deprecated // 2023-06-15
-  public @Nullable AnnotationMirror getAnnotation(String annoName) {
-    return getPrimaryAnnotation(annoName);
-  }
-
-  /**
-   * Returns an annotation from the given sub-hierarchy, if such an annotation targets this type;
-   * otherwise returns null.
-   *
-   * <p>It doesn't account for annotations in deep types (type arguments, array components, etc).
-   *
-   * <p>If there is only one hierarchy, you can use {@link #getPrimaryAnnotation()} instead.
-   *
-   * <p>May return null if the receiver is a type variable or a wildcard without a primary
-   * annotation, or if the receiver is not yet fully annotated.
-   *
-   * @param p the qualifier hierarchy to check for
-   * @return an annotation from the same hierarchy as {@code p} if present
-   * @deprecated use {@link #getPrimaryAnnotationInHierarchy(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public @Nullable AnnotationMirror getAnnotationInHierarchy(AnnotationMirror p) {
-    return getPrimaryAnnotationInHierarchy(p);
-  }
-
-  /**
-   * Returns the primary annotations on this type. For {@link AnnotatedTypeVariable}s and {@link
-   * AnnotatedWildcardType}s, the returned annotations may be empty or missing annotations in
-   * hierarchies, so {@link #getEffectiveAnnotations()} should be called instead.
-   *
-   * <p>It does not include annotations in deep types (type arguments, array components, etc).
-   *
-   * <p>To get the single primary annotation in a particular hierarchy, use {@link
-   * #getPrimaryAnnotationInHierarchy}. If there is only one hierarchy, you can use {@link
-   * #getPrimaryAnnotation}.
-   *
-   * @return an unmodifiable set of the annotations on this
-   * @deprecated use {@link #getPrimaryAnnotations()}
-   */
-  @Deprecated // 2023-06-15
-  public final AnnotationMirrorSet getAnnotations() {
-    return getPrimaryAnnotations();
-  }
-
-  /**
-   * Returns the annotations on this type; mutations affect this object, because the return type is
-   * an alias of the {@code annotations} field. It does not include annotations in deep types (type
-   * arguments, array components, etc).
-   *
-   * <p>The returned set should not be modified, but for efficiency reasons modification is not
-   * prevented. Modifications might break invariants.
-   *
-   * @return the set of the annotations on this; mutations affect this object
-   * @deprecated use {@link #getPrimaryAnnotationsField()}
-   */
-  @Deprecated // 2023-06-15
-  protected final AnnotationMirrorSet getAnnotationsField() {
-    return getPrimaryAnnotationsField();
-  }
-
-  /**
-   * Returns true if this type contains the given annotation. This method considers the annotation's
-   * values. If the type is {@code @A("s") @B(3) Object}, then a call with {@code @A("t")} or
-   * {@code @A} will return false, whereas a call with {@code @B(3)} will return true.
-   *
-   * <p>In contrast to {@link #hasPrimaryAnnotationRelaxed(AnnotationMirror)} this method also
-   * compares annotation values.
-   *
-   * @param a the annotation to check for
-   * @return true iff the type contains the annotation {@code a}
-   * @see #hasPrimaryAnnotationRelaxed(AnnotationMirror)
-   * @deprecated use {@link #hasPrimaryAnnotation(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean hasAnnotation(AnnotationMirror a) {
-    return hasPrimaryAnnotation(a);
-  }
-
-  /**
-   * Returns true if this type contains an annotation with the same annotation type as a particular
-   * annotation. This method does not consider an annotation's values.
-   *
-   * @param a the class of annotation to check for
-   * @return true iff the type contains an annotation with the same type as the annotation given by
-   *     {@code a}
-   * @deprecated use {@link #hasPrimaryAnnotation(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean hasAnnotation(Class<? extends Annotation> a) {
-    return hasPrimaryAnnotation(a);
-  }
-
-  /**
-   * Returns true if an annotation from the given sub-hierarchy targets this type.
-   *
-   * <p>It doesn't account for annotations in deep types (type arguments, array components, etc).
-   *
-   * @param p the qualifier hierarchy to check for
-   * @return true iff an annotation from the same hierarchy as {@code p} is present
-   * @deprecated use {@link #hasPrimaryAnnotationInHierarchy(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean hasAnnotationInHierarchy(AnnotationMirror p) {
-    return hasPrimaryAnnotationInHierarchy(p);
-  }
-
-  /**
-   * Returns true if this type contains an annotation with the same annotation type as a particular
-   * annotation. This method does not consider an annotation's values. If the type is
-   * {@code @A("s") @B(3) Object}, then a call with {@code @A("t")}, {@code @A}, or {@code @B} will
-   * return true.
-   *
-   * @param a the annotation to check for
-   * @return true iff the type contains an annotation with the same type as the annotation given by
-   *     {@code a}
-   * @see #hasPrimaryAnnotation(AnnotationMirror)
-   * @deprecated use {@link #hasPrimaryAnnotationRelaxed(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean hasAnnotationRelaxed(AnnotationMirror a) {
-    return hasPrimaryAnnotationRelaxed(a);
-  }
-
-  /**
-   * Removes an annotation from the type.
-   *
-   * @param a the annotation to remove
-   * @return true if the annotation was removed, false if the type's annotations were unchanged
-   * @deprecated use {@link #removePrimaryAnnotation(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean removeAnnotation(AnnotationMirror a) {
-    return removePrimaryAnnotation(a);
-  }
-
-  /**
-   * Removes an annotation of the given class from the type.
-   *
-   * @param a the class of the annotation to remove
-   * @return true if the annotation was removed, false if the type's annotations were unchanged
-   * @deprecated use {@link #removePrimaryAnnotationByClass}
-   */
-  @Deprecated // 2023-06-15
-  public boolean removeAnnotationByClass(Class<? extends Annotation> a) {
-    return removePrimaryAnnotationByClass(a);
-  }
-
-  /**
-   * Remove any annotation that is in the same qualifier hierarchy as the parameter.
-   *
-   * @param a an annotation from the same qualifier hierarchy
-   * @return if an annotation was removed
-   * @deprecated use {@link #removePrimaryAnnotationInHierarchy(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean removeAnnotationInHierarchy(AnnotationMirror a) {
-    return removePrimaryAnnotationInHierarchy(a);
-  }
-
-  /**
-   * Returns true if this type has a primary annotation in the same hierarchy as {@code annotation}.
-   *
-   * @param annotation the qualifier hierarchy to check for
-   * @return true iff this type has a primary annotation in the same hierarchy as {@code
-   *     annotation}.
-   * @deprecated use {@link #hasPrimaryAnnotationInHierarchy(AnnotationMirror)}
-   */
-  @Deprecated // 2023-06-15
-  public boolean isAnnotatedInHierarchy(AnnotationMirror annotation) {
-    return hasPrimaryAnnotationInHierarchy(annotation);
   }
 }
